@@ -1,7 +1,7 @@
 // depreciation example - sun.misc.BASE64Encoder;
 package com.amazonaws.samples.appconfig.utils;
-import sun.misc.BASE64Encoder;
 
+import java.util.Base64;
 import java.util.Date;
 
 
@@ -10,7 +10,7 @@ public class Encoder {
     Date defaultDate = new Date(1999, 0, 1);
 
     byte[] bytes = new byte[57];
-    String enc1 = new sun.misc.BASE64Encoder().encode(bytes);
+    String enc1 = Base64.getEncoder().encodeToString(bytes);
 
 
 }
